--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.1.0",
     "react-modal": "^3.12.1",
     "react-player": "^2.7.2",
+    "react-scroll": "^1.8.1",
     "styled-components": "^5.2.1",
     "tinymce": "^5.6.2",
     "tus-js-client": "^2.2.0",
@@ -41,6 +42,7 @@
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-modal": "^3.10.6",
+    "@types/react-scroll": "^1.8.2",
     "@types/styled-components": "^5.1.7",
     "@types/tinymce": "^4.6.0",
     "@types/tus-js-client": "^2.1.0",
