--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "next": "^10.0.3",
     "next-apollo": "^5.0.4",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-modal": "^3.12.1",
     "react-player": "^2.7.2",
     "react-scroll": "^1.8.1",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.2.1",
     "tinymce": "^5.6.2",
     "tus-js-client": "^2.2.0",
@@ -41,6 +43,7 @@
     "@graphql-codegen/typescript-react-apollo": "2.2.1",
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-modal": "^3.10.6",
     "@types/react-scroll": "^1.8.2",
     "@types/styled-components": "^5.1.7",
