--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "gen": "graphql-codegen --config codegen.yml",
     "prepare": "husky install"
   },
+  "lint-staged": {
+    "*.{ts,tsx}": ["eslint fix", "git add"]
+  },
   "dependencies": {
     "@apollo/client": "^3.3.6",
     "@material-ui/core": "^4.11.2",
@@ -68,6 +71,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4",
     "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   }
