--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "test": "jest --silent",
     "start": "next start",
     "gen": "graphql-codegen --config codegen.yml",
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{ts,tsx}": ["eslint fix"]
+    "*.{ts,tsx}": [
+      "eslint fix",
+      "cross-env CI=true yarn test --bail --findRelatedTests"
+    ]
   },
   "dependencies": {
     "@apollo/client": "^3.3.6",
@@ -45,6 +49,7 @@
     "@graphql-codegen/typescript": "1.19.0",
     "@graphql-codegen/typescript-operations": "1.17.12",
     "@graphql-codegen/typescript-react-apollo": "2.2.1",
+    "@types/jest": "^26.0.22",
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-beautiful-dnd": "^13.0.0",
@@ -59,6 +64,7 @@
     "babel-jest": "^26.6.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-styled-components": "^1.12.0",
+    "cross-env": "^7.0.3",
     "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^7.1.0",
@@ -71,6 +77,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4",
     "husky": "^6.0.0",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
