--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "test": "jest --silent",
+    "test": "jest",
     "start": "next start",
     "gen": "graphql-codegen --config codegen.yml",
     "husky": "npx husky",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
@@ -45,6 +47,7 @@
     "yup": "^0.32.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.15",
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
     "@graphql-codegen/cli": "1.19.4",
@@ -52,6 +55,15 @@
     "@graphql-codegen/typescript": "1.19.0",
     "@graphql-codegen/typescript-operations": "1.17.12",
     "@graphql-codegen/typescript-react-apollo": "2.2.1",
+    "@storybook/addon-a11y": "^6.2.8",
+    "@storybook/addon-actions": "^6.2.8",
+    "@storybook/addon-essentials": "^6.2.8",
+    "@storybook/addon-jest": "^6.2.8",
+    "@storybook/addon-links": "^6.2.8",
+    "@storybook/addon-storyshots": "^6.2.8",
+    "@storybook/react": "^6.2.8",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
@@ -65,6 +77,7 @@
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-styled-components": "^1.12.0",
     "commitizen": "^4.2.3",
@@ -83,8 +96,10 @@
     "eslint-plugin-react-hooks": "^4",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
+    "json-loader": "^0.5.7",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
+    "react-test-renderer": "^17.0.2",
     "typescript": "^4.1.3"
   },
   "config": {
