--- a/.eslintignore
+++ b/.eslintignore
@@ -3,3 +3,24 @@ node_modules
 dist
 build
 .next
+
+root/src/generated/**
+/root/src/generated/**
+./src/generated/**
+src/generated/**
+/src/generated/**
+
+root/src/generated/graphql.tsx
+/root/src/generated/graphql.tsx
+./src/generated/graphql.tsx
+src/generated/graphql.tsx
+/src/generated/graphql.tsx
+
+root/src/generated/graphql
+/root/src/generated/graphql
+./src/generated/graphql
+src/generated/graphql
+/src/generated/graphql
+
+**/generated/graphql
+**/generated/graphql.tsx
