--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "lodash": "^4.17.20",
     "next": "^10.0.3",
     "next-apollo": "^5.0.4",
+    "pagarme": "^4.16.0",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-input-mask": "^2.0.4",
     "react-modal": "^3.12.1",
     "react-player": "^2.7.2",
     "react-scroll": "^1.8.1",
@@ -68,6 +70,7 @@
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-beautiful-dnd": "^13.0.0",
+    "@types/react-input-mask": "^3.0.0",
     "@types/react-modal": "^3.10.6",
     "@types/react-scroll": "^1.8.2",
     "@types/styled-components": "^5.1.7",
