--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,12 +16,16 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/@types"
+    ]
   },
   "include": [
     "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
+    "./src/**/*.tsx",
+    "./src/**/*.ts"
   ],
   "exclude": [
     "node_modules"
