--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@material-ui/core": "^4.11.2",
     "@tinymce/tinymce-react": "^3.9.0",
     "axios": "^0.21.1",
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "formik": "^2.2.6",
