--- a/package.json
+++ b/package.json
@@ -106,14 +106,11 @@
     "lint-staged": "^10.5.4",
     "prettier": "^2.3.0",
     "react-test-renderer": "^17.0.2",
-    "typescript": "^4.3.2"
+    "typescript": "4.2.4"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  },
-  "msw": {
-    "workerDirectory": "public"
   }
 }
